--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -234,8 +234,8 @@ body {
 }
 
 .about_me {
-    width: 75%;
-    height: 75%;
+    width: 80%;
+    height: 80%;
     background-color: rgba(255, 255, 255, 0.95);
     position: absolute;
     top: 12.5%;
@@ -249,22 +249,22 @@ body {
 }
 
 .about_me p {
-    font-weight: 300;
+    font-weight: 200;
     font-size: 0.7em;
     letter-spacing: 0.1em;
-    padding-left: 50px;
-    padding-right: 50px;
+    padding-left: 10%;
+    padding-right: 10%;
     line-height: 1.3;
     font-family: 'Raleway', sans-serif;
 }
 
-.abo?ut_me li {
+.about_me li {
     font-weight: 200;
     font-size: 0.7em;
-    padding-left: 40px;
+    padding-left: 10px;
     padding-right: 50px;
     line-height: 1.8;
-    list-style-position: inside
+    list-style-position: inside;
     font-family: 'Raleway', sans-serif;
 }
 
@@ -275,10 +275,9 @@ body {
   font-size: 0.9em;
   letter-spacing: 0.01em;
   text-transform: uppercase;
-  padding-top: 40px;
-  padding-bottom: 20px;
+  padding-top: 20px;
+  padding-bottom: 15px;
 }
-
 
 .slidenav {
     width: 80%;
@@ -289,7 +288,6 @@ body {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: space-around;
   }
 
   .nav_button {
@@ -304,7 +302,6 @@ body {
 
   .slider_container {
     display: flex;
-    padding-bottom: 25px;
   }
 
   .slider_container_splash {
@@ -315,9 +312,11 @@ body {
 
   .container_left {
     width: 50%;
-    overflow:auto;
+    overflow:hidden;
     height: inherit;
   }
+
+
 
 a {
     text-transform: uppercase;
@@ -398,34 +397,41 @@ a {
       width: 100%;
   }
 
+  .container_left_modal img {
+    object-fit: cover;
+}
+
   .container_right {
     width: 50%;
 
 }
 
+.container_left_modal {
+  width: 40%;
+  overflow:hidden;
+  height: 100%;
+}
+
 .container_right_modal {
-  width: 50%;
+  width: 60%;
 }
 
 .project_text {
     color: white;
     padding-left: 30px;
     padding-right: 60px;
-    line-height: 1.5;
+    line-height: 1.3;
     font-size: 0.8em;
     margin: 0;
     font-weight: 300;
-    color: var(--colour2);
-    height: 100%;
-    overflow: scroll;
-    
+    color: var(--colour2);    
 }
 
 .project_text h3 {
     font-size: 1.5em;
     margin: 0;
     padding: 0;
-    padding-top: 3%;
+    padding-top: 0%;
     text-transform: capitalize;
     color: var(--colour1);
     letter-spacing: 0.1em;
@@ -503,7 +509,7 @@ a {
   .slider_container_splash h1 {
     color: rgb(237, 255, 157);
     line-height: 1.6;
-    font-size: 3em;
+    font-size: 2.5em;
     text-align: left;
   }
 
@@ -512,6 +518,7 @@ a {
     text-transform: uppercase;
     font-size: .8em;
     padding-top: 30px;
+    padding-left: 20px;
     text-align: right;
   }
 
@@ -670,8 +677,9 @@ a {
       padding-left: 40px;
       padding-right: 50px;
       line-height: 1.5;
-      list-style-position: inside
+      list-style-position: inside;
       font-family: 'Raleway', sans-serif;
+      
   }
   
   .about_me h4 {
@@ -727,7 +735,7 @@ a {
     }
   
     .container_right{
-      overflow: scroll;
+      overflow: auto;
     }
 
 }
